--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-Pillow==11.0.0
-pytesseract==0.3.10
-pdf2image==1.16.3
-pandas==2.2.2
-google-generativeai==0.3.2
-gunicorn==21.2.0
+Flask==2.3.3 
+Pillow==10.4.0 
+pytesseract==0.3.13 
+pdf2image==1.17.0 
+pandas==2.2.2 
+google-generative-ai==0.8.2 
+flask-cors==4.0.1
+gunicorn==22.0.0
