--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Flask==2.3.3
 Pillow==10.4.0 
 pytesseract==0.3.13 
 pdf2image==1.17.0 
-pandas==2.2.2 
+pandas>=2.2.3
+cython>=3.0.6
 google-generative-ai==0.8.2 
 flask-cors==4.0.1
 gunicorn==22.0.0
