--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-Pillow>=10.4.0
-pytesseract>=0.3.13
-pdf2image>=1.17.0
-pandas>=2.2.3
-cython>=3.0.6
-google-generative-ai>=0.8.5
-gunicorn==21.2.0
+Flask==2.3.3 
+Pillow==10.4.0 
+pytesseract==0.3.13 
+pdf2image==1.17.0 
+pandas==2.2.2 
+google-genai>=1.29.0 
+flask-cors==4.0.1
+gunicorn==22.0.0
